CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(rpi_st7735)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_extensions/)
FIND_PACKAGE(VIGRA REQUIRED)
if (VIGRA_FOUND)
    MESSAGE("--   > vigra found!")
    INCLUDE_DIRECTORIES(SYSTEM ${VIGRA_INCLUDE_DIR})
    LINK_DIRECTORIES( ${VIGRA_IMPEX_LIBRARY_DIR})
endif()

SET(CMAKE_CXX_FLAGS "-Wall -Wextra -Wfatal-errors -std=c++11 -pedantic -pthread")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -Werror")	



INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include/")

FILE(GLOB LIB_VIGRA "src/vigra_interface/*.cxx")
ADD_LIBRARY(vigra_interface SHARED ${LIB_VIGRA})




FILE(GLOB LIB "src/*.cxx")
ADD_LIBRARY(framebuffer SHARED ${LIB})
TARGET_LINK_LIBRARIES(vigra_interface ${VIGRA_IMPEX_LIBRARY})
INSTALL(TARGETS framebuffer LIBRARY DESTINATION lib)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/include/framebuffer DESTINATION include) 


INSTALL(TARGETS vigra_interface LIBRARY DESTINATION lib)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/include/vigra_interface DESTINATION include)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/include/pixel_drawer DESTINATION include)


SET(WITH_PYTHON true CACHE BOOL "Build with python wrapper.")
IF(WITH_PYTHON)
  ADD_SUBDIRECTORY(python/)
ENDIF(WITH_PYTHON)

SET(WITH_EXAMPLES true CACHE BOOL "Build with examples.")
IF(WITH_EXAMPLES)
  ADD_SUBDIRECTORY(examples/)
ENDIF(WITH_EXAMPLES)